--- a/src/main/resources/templates/readingList.html
+++ b/src/main/resources/templates/readingList.html
@@ -1,7 +1,10 @@
 <html xmlns:th="http://www.w3.org/1999/xhtml">
   <head>
     <title>Reading List</title>
-    <link rel="stylesheet" th:href="@{/style.css}"></link>
+    <base href="/"/>
+    <script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css"/>
+    <script type="text/javascript" src="/webjars/bootstrap/js/bootstrap.min.js"></script>
   </head>
 
   <body>
@@ -40,7 +43,7 @@
       <input type="submit"></input>
     </form>
 
-    <h1 th:inline="text">You are signed in as: [[${#httpServletRequest.remoteUser}]]!</h1>
+    <h4 th:inline="text">You are signed in as: [[${#httpServletRequest.remoteUser}]]!</h4>
 
     <form th:action="@{/logout}" method="post">
       <input type="submit" value="Sign Out"/>
