--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <h1>Welcome!</h1>
-
+        <h3>Back-end development</h3>
         <p>Click <a th:href="@{/readingList}">here</a> to see your ReadingList.</p>
     </body>
 </html>
